[project]
name = "youtube-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "openai>=2.46.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "tiktoken>=0.13.0",
    "youtube-transcript-api>=1.2.4",
]
